--- a/README.Rmd
+++ b/README.Rmd
@@ -1,13 +1,19 @@
-
-Tools to support literature review and evidence synthesis in R, including import, de-duplication and interactive display of bibliographic data. 
-
-<img align="left" height="120" src="https://github.com/mjwestgate/revtools_website/blob/master/assets/img/revtools_hex.png"><b>developed from revtools v0.4.0.9999</b>
+---
+title: "Project overview"
 ---
 
-This repository is an extention of Martian Westgate from the Australian National University. The aims of this project are to extend the revtools package developed from Martian's work to produce reproducible research and bibilography analysis for ecological modelling. We are currently working on:
+# Overview {#over}
 
-- turning this into a gitbook in vignette file?
+`revtoolsPFNZ` is an R package to support literature review and evidence synthesis in R, including import, de-duplication and interactive display of bibliographic data for invasive species modelling for the NZ goverments "Predator-Free NZ 2050". This repository is an extention of Martian Westgate from the Australian National University. The aims of this project are to extend the revtools package developed from Martian's work to produce reproducible research and bibilography analysis for ecological modelling. We are currently working on:
+
+## Aims
+
+1. turning this into a gitbook in vignette file?
 - link with typora
+
+<img align="left" height="120" src="https://github.com/mjwestgate/revtools_website/blob/master/assets/img/revtools_hex.png"><b>developed from revtools v0.4.0.9999</b>
+
+## To Do
 
 Our concepts for extentions (Oct 2019):
 
